{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 159,
  "lineage": "280ce342-67ee-e80c-04a9-80d90fbad3fa",
  "resources": [
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fd89eaf9eddeb85",
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:instance/i-00dc641060a7aea22",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dc641060a7aea22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "prod-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05029ae813032e181",
            "private_dns": "ip-10-0-1-32.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-3-36-121-76.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.121.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8a16e089184b98e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f19c027ae406657",
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-server",
              "Type": "Backend"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-server",
              "Type": "Backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d8bf6db6d518380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_security_group.backend_alb",
            "module.backend.aws_security_group.backend_ec2",
            "module.backend.data.aws_ami.amazon_linux",
            "module.common.aws_key_pair.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-backend-alb/e59238c95a9638e4",
            "arn_suffix": "app/prod-backend-alb/e59238c95a9638e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-backend-alb-975615061.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-backend-alb/e59238c95a9638e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c16ca470f409423"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006cade2ef9bba570"
              },
              {
                "subnet_id": "subnet-03f19c027ae406657"
              }
            ],
            "subnets": [
              "subnet-006cade2ef9bba570",
              "subnet-03f19c027ae406657"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-alb"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_security_group.backend_alb",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:listener/app/prod-backend-alb/e59238c95a9638e4/76f2d837fe3bbef7",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:933851512157:certificate/cc8e0286-afe6-4d8a-9be8-8f3b3405ba23",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-backend-tg/2f77baf6e27e61b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:listener/app/prod-backend-alb/e59238c95a9638e4/76f2d837fe3bbef7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-backend-alb/e59238c95a9638e4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-https-listener"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-https-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_lb.backend",
            "module.backend.aws_lb_target_group.backend",
            "module.backend.aws_security_group.backend_alb",
            "module.common.aws_acm_certificate.main",
            "module.common.aws_acm_certificate_validation.main",
            "module.common.aws_route53_record.cert_validation",
            "module.common.aws_route53_zone.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-backend-tg/2f77baf6e27e61b9",
            "arn_suffix": "targetgroup/prod-backend-tg/2f77baf6e27e61b9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/weather",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-backend-tg/2f77baf6e27e61b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-backend-tg/2f77baf6e27e61b9-20250806165907912800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-backend-tg/2f77baf6e27e61b9",
            "target_id": "i-00dc641060a7aea22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_instance.backend",
            "module.backend.aws_lb_target_group.backend",
            "module.backend.aws_security_group.backend_alb",
            "module.backend.aws_security_group.backend_ec2",
            "module.backend.data.aws_ami.amazon_linux",
            "module.common.aws_key_pair.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:security-group/sg-07c16ca470f409423",
            "description": "Security group for Backend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c16ca470f409423",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.46.0.0/16"
                ],
                "description": "HTTP redirect",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.46.0.0/16"
                ],
                "description": "HTTPS from corporate networks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-backend-alb-20250806164219096200000003",
            "name_prefix": "prod-backend-alb-",
            "owner_id": "933851512157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:security-group/sg-05d8bf6db6d518380",
            "description": "Security group for Backend EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d8bf6db6d518380",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for debugging)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c16ca470f409423"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-backend-ec2-20250806164220727500000006",
            "name_prefix": "prod-backend-ec2-",
            "owner_id": "933851512157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-backend-ec2-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-backend-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_security_group.backend_alb",
            "module.common.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:internet-gateway/igw-06a8053053d1c2a3b",
            "id": "igw-06a8053053d1c2a3b",
            "owner_id": "933851512157",
            "tags": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:route-table/rtb-0dc0d2a60e80ec70f",
            "id": "rtb-0dc0d2a60e80ec70f",
            "owner_id": "933851512157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a8053053d1c2a3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_internet_gateway.main",
            "module.common.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953fda4b7352c31a",
            "route_table_id": "rtb-0dc0d2a60e80ec70f",
            "subnet_id": "subnet-03f19c027ae406657"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_internet_gateway.main",
            "module.common.aws_route_table.public",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ad6469f3ceb8f9",
            "route_table_id": "rtb-0dc0d2a60e80ec70f",
            "subnet_id": "subnet-006cade2ef9bba570"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_internet_gateway.main",
            "module.common.aws_route_table.public",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:subnet/subnet-052959bde1038d6d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052959bde1038d6d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933851512157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:subnet/subnet-060dcf643f698fe55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060dcf643f698fe55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933851512157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:subnet/subnet-03f19c027ae406657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f19c027ae406657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933851512157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:subnet/subnet-006cade2ef9bba570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006cade2ef9bba570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933851512157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:vpc/vpc-0477fbaf9d947a5c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d4f090ac46d2c8a",
            "default_route_table_id": "rtb-0cea8ccc7efc36bad",
            "default_security_group_id": "sg-036bda3d2ee6184d3",
            "dhcp_options_id": "dopt-51d7693a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0477fbaf9d947a5c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cea8ccc7efc36bad",
            "owner_id": "933851512157",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fd89eaf9eddeb85",
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:instance/i-0fa0044be25293fed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa0044be25293fed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "prod-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b5f1b86ecd307ea",
            "private_dns": "ip-10-0-1-245.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-38-102-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.102.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003c989a368b9d863",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f19c027ae406657",
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-server",
              "Type": "Frontend"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-server",
              "Type": "Frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fece9e277a04bff2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_key_pair.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available",
            "module.frontend.aws_security_group.frontend_alb",
            "module.frontend.aws_security_group.frontend_ec2",
            "module.frontend.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-frontend-alb/0b036d3e1b409e1d",
            "arn_suffix": "app/prod-frontend-alb/0b036d3e1b409e1d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-frontend-alb-733287521.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-frontend-alb/0b036d3e1b409e1d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-058d669f11ca6b1ab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006cade2ef9bba570"
              },
              {
                "subnet_id": "subnet-03f19c027ae406657"
              }
            ],
            "subnets": [
              "subnet-006cade2ef9bba570",
              "subnet-03f19c027ae406657"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-alb"
            },
            "vpc_id": "vpc-0477fbaf9d947a5c3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available",
            "module.frontend.aws_security_group.frontend_alb"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:listener/app/prod-frontend-alb/0b036d3e1b409e1d/7776fe0ad0f0eed0",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:933851512157:certificate/cc8e0286-afe6-4d8a-9be8-8f3b3405ba23",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-frontend-tg/1780f72509b37a4c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:listener/app/prod-frontend-alb/0b036d3e1b409e1d/7776fe0ad0f0eed0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:loadbalancer/app/prod-frontend-alb/0b036d3e1b409e1d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-https-listener"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-https-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_acm_certificate.main",
            "module.common.aws_acm_certificate_validation.main",
            "module.common.aws_route53_record.cert_validation",
            "module.common.aws_route53_zone.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available",
            "module.frontend.aws_lb.frontend",
            "module.frontend.aws_lb_target_group.frontend",
            "module.frontend.aws_security_group.frontend_alb"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-frontend-tg/1780f72509b37a4c",
            "arn_suffix": "targetgroup/prod-frontend-tg/1780f72509b37a4c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-frontend-tg/1780f72509b37a4c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-frontend-tg/1780f72509b37a4c-20250806165908051600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933851512157:targetgroup/prod-frontend-tg/1780f72509b37a4c",
            "target_id": "i-0fa0044be25293fed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_key_pair.main",
            "module.common.aws_subnet.public",
            "module.common.aws_vpc.main",
            "module.common.data.aws_availability_zones.available",
            "module.frontend.aws_instance.frontend",
            "module.frontend.aws_lb_target_group.frontend",
            "module.frontend.aws_security_group.frontend_alb",
            "module.frontend.aws_security_group.frontend_ec2",
            "module.frontend.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:security-group/sg-058d669f11ca6b1ab",
            "description": "Security group for Frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058d669f11ca6b1ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.46.0.0/16"
                ],
                "description": "HTTP redirect",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.46.0.0/16"
                ],
                "description": "HTTPS from corporate networks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-frontend-alb-20250806164219097700000004",
            "name_prefix": "prod-frontend-alb-",
            "owner_id": "933851512157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933851512157:security-group/sg-0fece9e277a04bff2",
            "description": "Security group for Frontend EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fece9e277a04bff2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for debugging)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058d669f11ca6b1ab"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-frontend-ec2-20250806164220732400000007",
            "name_prefix": "prod-frontend-ec2-",
            "owner_id": "933851512157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-frontend-ec2-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-frontend-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0477fbaf9d947a5c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.common.aws_vpc.main",
            "module.frontend.aws_security_group.frontend_alb"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}